--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "jms/di-extra-bundle": "1.1.*",
 
         "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        
+        "knplabs/knp-menu-bundle": "1.1.x-dev"
     },
     "scripts": {
         "post-install-cmd": [
