--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,6 +60,11 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+# fos_user:
+#     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+#     firewall_name: main
+#     user_class: App\UserBundle\Entity\User
+
 sonata_block:
     default_contexts: [cms]
     blocks:
