--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+app_user:
+    resource: "@AppUserBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 app_default:
     resource: "@AppDefaultBundle/Controller/"
     type:     annotation
