--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,10 @@
 
         "sonata-project/admin-bundle": "dev-master",
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "knplabs/knp-menu-bundle": "1.1.x-dev",
+
+        "friendsofsymfony/user-bundle": "2.0.x-dev"
         
-        "knplabs/knp-menu-bundle": "1.1.x-dev"
     },
     "scripts": {
         "post-install-cmd": [
