--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,10 +60,10 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-# fos_user:
-#     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
-#     firewall_name: main
-#     user_class: App\UserBundle\Entity\User
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: App\UserBundle\Entity\User
 
 sonata_block:
     default_contexts: [cms]
