--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,11 @@
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "1.1.x-dev",
 
-        "friendsofsymfony/user-bundle": "2.0.x-dev"
+        "friendsofsymfony/user-bundle": "2.0.x-dev",
+
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+
+        "doctrine/doctrine-migrations-bundle": "dev-master"
         
     },
     "scripts": {
