GedmoBundle, AvalancheImageBundle, EvercodePageBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,3 +70,9 @@ sonata_block:
     blocks:
         sonata.admin.block.admin_list:
             contexts:   [admin]
+
+avalanche_imagine:
+    source_root:  %kernel.root_dir%/../web
+    web_root:     %kernel.root_dir%/../web
+    driver:       gd
+    cache_prefix: uploads/cache
