--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
 
+        "gedmo/doctrine-extensions": "2.3.x-dev",
+
         "sonata-project/admin-bundle": "dev-master",
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "1.1.x-dev",
@@ -28,7 +30,11 @@
 
         "doctrine/doctrine-fixtures-bundle": "dev-master",
 
-        "doctrine/doctrine-migrations-bundle": "dev-master"
+        "doctrine/doctrine-migrations-bundle": "dev-master",
+
+        "avalanche123/imagine-bundle": "dev-master",
+
+        "evercodelab/evercode-page-bundle": "dev-master"
         
     },
     "scripts": {
