--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,7 +14,7 @@ framework:
     form:            true
     csrf_protection: true
     validation:      { enable_annotations: true }
-    templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
+    templating:      { engines: ['twig'], assets_version: %assets_version% }
     default_locale:  "%locale%"
     trust_proxy_headers: false # Whether or not the Request object should trust proxy headers (X_FORWARDED_FOR/HTTP_CLIENT_IP)
     session:         ~
@@ -76,3 +76,5 @@ avalanche_imagine:
     web_root:     %kernel.root_dir%/../web
     driver:       gd
     cache_prefix: uploads/cache
+
+kachkaev_assets_version: ~
