--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "symfony/framework-standard-edition",
-    "description": "The \"Symfony Standard Edition\" distribution",
+    "name": "evercode/symfony-skeleton",
+    "description": "The \"Symfony Evercode Edition\" skeleton with basic configuration",
     "autoload": {
         "psr-0": { "App": "src/" }
     },
@@ -37,7 +37,6 @@
         "kachkaev/assets-version-bundle": "1.0.x-dev",
 
         "evercodelab/evercode-page-bundle": "dev-master"
-        
     },
     "scripts": {
         "post-install-cmd": [
