--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,12 @@
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "1.1.x-dev",
 
+        "behat/behat": "2.4@stable",
+        "behat/mink": "1.4.*@stable",
+        "behat/symfony2-extension":      "*",
+        "behat/mink-extension":          "*",
+        "behat/mink-browserkit-driver":  "*",
+
         "friendsofsymfony/user-bundle": "2.0.x-dev",
 
         "doctrine/doctrine-fixtures-bundle": "dev-master",
@@ -53,6 +59,9 @@
         ]
     },
     "minimum-stability": "dev",
+    "config": {
+        "bin-dir": "bin/"
+    },
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web"
