--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "1.1.x-dev",
 
-        "behat/behat": "2.4@stable",
+        "behat/behat": "2.4.*@stable",
         "behat/mink": "1.4.*@stable",
         "behat/symfony2-extension":      "*",
         "behat/mink-extension":          "*",
