Initial commit for 2.2 branch

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -1,17 +1,15 @@
 parameters:
-    assets_version:    v1
-
     database_driver:   pdo_mysql
-    database_host:     localhost
+    database_host:     127.0.0.1
     database_port:     ~
     database_name:     symfony
     database_user:     root
-    database_password: 123
+    database_password: ~
 
     mailer_transport:  smtp
-    mailer_host:       localhost
+    mailer_host:       127.0.0.1
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            ru
+    locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
