--- a/composer.json
+++ b/composer.json
@@ -1,51 +1,23 @@
 {
-    "name": "evercode/symfony-skeleton",
-    "description": "The \"Symfony Evercode Edition\" skeleton with basic configuration",
+    "name": "symfony/framework-standard-edition",
+    "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
-        "psr-0": { "App": "src/" }
+        "psr-0": { "": "src/" }
     },
     "require": {
-
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.0.*",
+        "symfony/symfony": "2.2.*",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "1.2.*",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.1.*",
-        "symfony/swiftmailer-bundle": "2.1.*",
-        "symfony/monolog-bundle": "2.1.*",
-        "sensio/distribution-bundle": "2.1.*",
-        "sensio/framework-extra-bundle": "2.1.*",
-        "sensio/generator-bundle": "2.1.*",
-        "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*",
-
-        "gedmo/doctrine-extensions": "2.3.x-dev",
-
-        "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
-        "knplabs/knp-menu-bundle": "1.1.x-dev",
-
-        "behat/behat": "2.4.*@stable",
-        "behat/mink": "1.4.*@stable",
-        "behat/symfony2-extension":      "*",
-        "behat/mink-extension":          "*",
-        "behat/mink-browserkit-driver":  "*",
-
-        "friendsofsymfony/user-bundle": "2.0.x-dev",
-
-        "doctrine/doctrine-fixtures-bundle": "dev-master",
-
-        "doctrine/doctrine-migrations-bundle": "dev-master",
-
-        "avalanche123/imagine-bundle": "dev-master",
-
-        "kachkaev/assets-version-bundle": "1.0.x-dev",
-
-        "evercodelab/evercode-page-bundle": "dev-master",
-
-        "fabpot/php-cs-fixer": "dev-master",
-        "stof/doctrine-extensions-bundle": "1.1.x-dev"
+        "symfony/swiftmailer-bundle": "2.2.*",
+        "symfony/monolog-bundle": "2.2.*",
+        "sensio/distribution-bundle": "2.2.*",
+        "sensio/framework-extra-bundle": "2.2.*",
+        "sensio/generator-bundle": "2.2.*",
+        "jms/security-extra-bundle": "1.4.*",
+        "jms/di-extra-bundle": "1.3.*"
     },
     "scripts": {
         "post-install-cmd": [
@@ -61,12 +33,15 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
         ]
     },
-    "minimum-stability": "dev",
     "config": {
-        "bin-dir": "bin/"
+        "bin-dir": "bin"
     },
+    "minimum-stability": "dev",
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
+        "symfony-web-dir": "web",
+        "branch-alias": {
+            "dev-master": "2.2-dev"
+        }
     }
 }
