--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "jms/di-extra-bundle": "1.3.*",
 
         "gedmo/doctrine-extensions": "2.3.*@dev",
-        "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "sonata-project/admin-bundle": "2.2.*@dev",
+        "sonata-project/doctrine-orm-admin-bundle": "2.2.*@dev",
         "knplabs/knp-menu-bundle": "1.1.x-dev",
         "knplabs/knp-paginator-bundle": "2.3.*@dev",
         "friendsofsymfony/user-bundle": "2.0.x-dev",
