--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -56,7 +56,7 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: App\UserBundle\Entity\User
+    user_class: App\Entity\User
 
 sonata_block:
     default_contexts: [cms]
