--- a/composer.json
+++ b/composer.json
@@ -19,21 +19,27 @@
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
 
-        "gedmo/doctrine-extensions": "2.3.*@dev",
+        "gedmo/doctrine-extensions": "2.3.*",
+        "doctrine/doctrine-fixtures-bundle": "2.1.*",
+        "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/doctrine-migrations-bundle": "dev-master",
+
         "sonata-project/admin-bundle": "2.2.*@dev",
         "sonata-project/doctrine-orm-admin-bundle": "2.2.*@dev",
-        "knplabs/knp-menu-bundle": "1.1.x-dev",
+        "sonata-project/block-bundle": "2.2.*@dev",
+
+        "knplabs/knp-menu-bundle": "1.1.*@dev",
         "knplabs/knp-paginator-bundle": "2.3.*@dev",
-        "friendsofsymfony/user-bundle": "2.0.x-dev",
-        "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "doctrine/doctrine-migrations-bundle": "dev-master",
+
+        "friendsofsymfony/user-bundle": "2.0.*@dev",
+        
         "avalanche123/imagine-bundle": "dev-master",
         "evercodelab/evercode-page-bundle": "dev-master",
         "evercodelab/evercode-frontend-bundle": "dev-master"
     },
     "require-dev": {
         "behat/behat": "2.4.*",
-        "behat/mink": "1.4.*@dev",
+        "behat/mink": "1.4.*",
         "behat/symfony2-extension": "*",
         "behat/mink-extension": "*",
         "behat/mink-goutte-driver": "*",
@@ -58,7 +64,7 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "alpha",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
