--- a/app/config/admin_services.yml
+++ b/app/config/admin_services.yml
@@ -1,6 +1,6 @@
 services:
     app.user.admin:
-        class: App\Admin\UserAdmin
+        class: App\AppBundle\Admin\UserAdmin
         tags:
             - { name: sonata.admin, manager_type: orm, group: User, label: User }
-        arguments: [null, App\Entity\User, SonataAdminBundle:CRUD]
+        arguments: [null, App\AppBundle\Entity\User, SonataAdminBundle:CRUD]
