Fix #7: add some default context. Update vendors. Tests configuration

--- a/behat.yml
+++ b/behat.yml
@@ -1,7 +1,27 @@
 default:
     formatter:
         name: progress
+    paths:
+        features: features
+    context:
+        class:  Context\FeatureContext
     extensions:
+        Behat\Symfony2Extension\Extension: 
+            mink_driver: true
+            kernel:
+                env: test
+                debug: true
         Behat\MinkExtension\Extension:
+            base_url: 'http://localhost:8000/app_test.php/'
+            default_session: symfony2
             goutte: ~
             selenium2: ~
+
+# If you want MinkExtension to open browser
+# with last response page every time you have
+# a failed step, execute this in your shell:
+#
+#   export MINK_EXTENSION_PARAMS='show_auto=true&show_cmd=firefox %s'
+#
+# where `firefox %s` is the page opening command
+# For MacOS you can use `export MINK_EXTENSION_PARAMS='show_auto=true&show_cmd=/Applications/Safari.app/Contents/MacOS/Safari %s'`
