--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,15 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+doctrine:
+    dbal:
+        driver:   %database_driver%
+        host:     %database_host%
+        port:     %database_port%
+        dbname:   %database_name%_%kernel.environment%
+        user:     %database_user%
+        password: %database_password%
+        charset:  UTF8
+        options:
+            1002: 'SET SESSION wait_timeout=30;'
