--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,7 @@
         "behat/symfony2-extension": "*",
         "behat/mink-extension": "*",
         "behat/mink-goutte-driver": "*",
-        "behat/mink-selenium2-driver": "*",
-        "phpspec/phpspec2": "dev-develop",
-        "phpspec/php-diff": "*@dev"
+        "behat/mink-selenium2-driver": "*"
     },
     "scripts": {
         "post-install-cmd": [
@@ -64,6 +62,7 @@
         "bin-dir": "bin"
     },
     "minimum-stability": "alpha",
+    "prefer-stable": true,
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
