Update vendors. Fix doctrine fixtures namespace. Added two bundles. Update readme.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,3 +69,6 @@ avalanche_imagine:
     web_root:     %kernel.root_dir%/../web
     driver:       gd
     cache_prefix: uploads/cache
+
+vich_uploader:
+    db_driver: orm
