--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,11 @@
         "knplabs/knp-paginator-bundle": "2.3.*@dev",
 
         "friendsofsymfony/user-bundle": "2.0.*@dev",
+        "friendsofsymfony/rest-bundle": "1.0.*@dev",
         
         "avalanche123/imagine-bundle": "dev-master",
-        "evercodelab/evercode-page-bundle": "dev-master"
+        "evercodelab/evercode-page-bundle": "dev-master",
+        "vich/uploader-bundle": "dev-master"
     },
     "require-dev": {
         "behat/behat": "2.4.*",
