Update Symfony and bundles.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,8 +64,8 @@ sonata_block:
         sonata.admin.block.admin_list:
             contexts:   [admin]
 
-avalanche_imagine:
-    source_root:  %kernel.root_dir%/../web
+liip_imagine:
+    data_root:    %kernel.root_dir%/../web
     web_root:     %kernel.root_dir%/../web
     driver:       gd
     cache_prefix: uploads/cache
