--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,7 +19,8 @@ framework:
         assets_version: v1
     default_locale:  "%locale%"
     trusted_proxies: ~
-    session:         ~
+    session:
+        save_path: "%kernel.root_dir%/sessions/"
     fragments:       ~
 
 twig:
