--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "evercodelab/symfony-skeleton",
     "license": "MIT",
     "type": "project",
-    "description": "The \"Symfony Evercode Edition\" skeleton with basic configuration",
+    "description": "The \"Symfony Evercodelab Edition\" skeleton with basic configuration",
     "autoload": {
         "psr-0": { "": "src/", "Context": "features/" }
     },
@@ -74,7 +74,7 @@
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "2.3-dev"
+            "dev-master": "2.4-dev"
         }
     }
 }
