--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -31,9 +31,8 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
-_imagine:
-    resource: .
-    type:     imagine
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
 
 EvercodePageBundle:
     resource: "@EvercodePageBundle/Controller/"
