--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "symfony/symfony": "~2.4",
+        "symfony/symfony": "~2.5",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
@@ -26,7 +26,7 @@
         "doctrine/doctrine-fixtures-bundle": "~2.2",
         "doctrine/data-fixtures": "~1.0",
         "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
-        "doctrine/migrations": "1.0.*@dev",
+        "doctrine/migrations": "dev-master",
 
         "sonata-project/admin-bundle": "~2.2",
         "sonata-project/core-bundle": "~2.2@dev",
