--- a/composer.json
+++ b/composer.json
@@ -15,31 +15,32 @@
         "symfony/assetic-bundle": "~2.3",
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~2.3",
-        "sensio/framework-extra-bundle": "~2.3",
+        "sensio/distribution-bundle": "~3.0",
+        "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
         
-        "jms/security-extra-bundle": "dev-master",
-        "gedmo/doctrine-extensions": "2.3.*",
+        "jms/security-extra-bundle": "~1.5",
+        "gedmo/doctrine-extensions": "~2.3",
 
         "doctrine/doctrine-fixtures-bundle": "~2.2",
         "doctrine/data-fixtures": "~1.0",
-        "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
-        "doctrine/migrations": "dev-master",
+        "doctrine/doctrine-migrations-bundle": "2.1.x-dev",
+        "doctrine/migrations": "1.0.x-dev",
 
         "sonata-project/admin-bundle": "~2.2",
-        "sonata-project/core-bundle": "~2.2@dev",
+        "sonata-project/core-bundle": "~2.2",
         "sonata-project/doctrine-orm-admin-bundle": "~2.2",
         "sonata-project/block-bundle": "~2.2",
+        "sonata-project/jquery-bundle": "~1.9",
 
         "knplabs/knp-menu-bundle": "~1.1",
-        "knplabs/knp-paginator-bundle": "~2.3",
+        "knplabs/knp-paginator-bundle": "~2.4",
 
         "friendsofsymfony/user-bundle": "2.0.*@dev",
-        "friendsofsymfony/rest-bundle": "~1.0",
+        "friendsofsymfony/rest-bundle": "~1.4",
         
-        "liip/imagine-bundle": "1.0.*@dev",
+        "liip/imagine-bundle": "~1.0",
         "evercodelab/evercode-page-bundle": "dev-master",
         "vich/uploader-bundle": "dev-master"
     },
