--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,16 +1,6 @@
 imports:
     - { resource: config.yml }
 
-#framework:
-#    validation:
-#        cache: apc
-
-#doctrine:
-#    orm:
-#        metadata_cache_driver: apc
-#        result_cache_driver: apc
-#        query_cache_driver: apc
-
 monolog:
     handlers:
         main:
@@ -21,3 +11,7 @@ monolog:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+        # If dont need message to hipchat delete lines below
+        hipchat:
+            type: service
+            id: evercode.monolog.handler.hipchat
