--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,15 +1,20 @@
 parameters:
-    database_driver:   pdo_mysql
-    database_host:     localhost
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
+    database_driver:    pdo_mysql
+    database_host:      localhost
+    database_port:      ~
+    database_name:      symfony
+    database_user:      root
+    database_password:  ~
 
-    mailer_transport:  smtp
-    mailer_host:       localhost
-    mailer_user:       ~
-    mailer_password:   ~
+    mailer_transport:   smtp
+    mailer_host:        localhost
+    mailer_user:        ~
+    mailer_password:    ~
 
-    locale:            ru
-    secret:            ThisTokenIsNotSoSecretChangeIt
+    locale:             ru
+    secret:             ThisTokenIsNotSoSecretChangeIt
+
+    # Parameters for hipchat
+    hipchat_auth_token: YOU_TOKEN_GOSE_HERE
+    hipchat_name:       HipchatReporterName
+    hipchat_room:       HipchatRoom
