--- a/composer.json
+++ b/composer.json
@@ -46,13 +46,14 @@
         "vich/uploader-bundle": "dev-master"
     },
     "require-dev": {
-        "liip/functional-test-bundle":  "1.0.*@dev",
-        "behat/behat":                  "~3.0",
-        "behat/mink":                   "~1.6@dev",
-        "behat/symfony2-extension":     "~2.0@dev",
-        "behat/mink-extension":         "~2.0@dev",    
+        "liip/functional-test-bundle": "1.0.*@dev",
+        "behat/behat": "~3.0",
+        "behat/mink": "~1.6@dev",
+        "behat/symfony2-extension": "~2.0@dev",
+        "behat/mink-extension": "~2.0@dev",
         "behat/mink-browserkit-driver": "~1.2@dev",
-        "behat/mink-goutte-driver":     "~1.1@dev"
+        "behat/mink-goutte-driver": "~1.1@dev",
+        "phpspec/phpspec": "~2.0"
     },
     "scripts": {
         "post-install-cmd": [
