--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "symfony/symfony": "~2.5",
+        "symfony/symfony": "~2.6",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
@@ -28,31 +28,22 @@
         "doctrine/doctrine-migrations-bundle": "2.1.x-dev",
         "doctrine/migrations": "1.0.x-dev",
 
-        "sonata-project/admin-bundle": "~2.2",
-        "sonata-project/core-bundle": "~2.2",
-        "sonata-project/doctrine-orm-admin-bundle": "~2.2",
+        "sonata-project/admin-bundle": "~2.3",
+        "sonata-project/core-bundle": "~2.3",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.3",
         "sonata-project/block-bundle": "~2.2",
-        "sonata-project/jquery-bundle": "~1.9",
 
-        "knplabs/knp-menu-bundle": "~1.1",
+        "knplabs/knp-menu-bundle": "~2.0",
         "knplabs/knp-paginator-bundle": "~2.4",
 
         "friendsofsymfony/user-bundle": "2.0.*@dev",
-        "friendsofsymfony/rest-bundle": "~1.4",
-        
-        "liip/imagine-bundle": "~1.0",
+
+        "liip/imagine-bundle": "~1.2",
         "evercodelab/hipchat-monolog-bundle": "dev-master",
-        "vich/uploader-bundle": "dev-master"
+        "vich/uploader-bundle": "~0.14"
     },
     "require-dev": {
-        "liip/functional-test-bundle": "1.0.*@dev",
-        "behat/behat": "~3.0",
-        "behat/mink": "~1.6@dev",
-        "behat/symfony2-extension": "~2.0@dev",
-        "behat/mink-extension": "~2.0@dev",
-        "behat/mink-browserkit-driver": "~1.2@dev",
-        "behat/mink-goutte-driver": "~1.1@dev",
-        "phpspec/phpspec": "~2.0"
+        "liip/functional-test-bundle": "~1.0"
     },
     "scripts": {
         "post-install-cmd": [
