Some configuration improvments:
Add open file in ide option
Dont log events
Move tests to tests directory

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,6 +22,8 @@ framework:
     session:
         save_path: "%kernel.root_dir%/sessions/"
     fragments:       ~
+    # Click-to-file in Symfony excpetions: open file with exception in editor (default PHPStorm)
+    # ide: "phpstorm://open?file=%%f&line%%l"
 
 twig:
     debug:            %kernel.debug%
