--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,6 +20,7 @@ framework:
     default_locale:  "%locale%"
     trusted_proxies: ~
     session:
+        handler_id: session.handler.native_file
         save_path: "%kernel.root_dir%/sessions/"
     fragments:       ~
     # Click-to-file in Symfony excpetions: open file with exception in editor (default PHPStorm)
