--- a/composer.json
+++ b/composer.json
@@ -25,16 +25,15 @@
         "jms/security-extra-bundle": "~1.5",
         "gedmo/doctrine-extensions": "~2.3",
 
-        "doctrine/doctrine-fixtures-bundle": "~2.2",
-        "doctrine/data-fixtures": "~1.0",
-        "doctrine/doctrine-migrations-bundle": "2.1.x-dev",
-        "doctrine/migrations": "1.0.x-dev",
+        "doctrine/migrations": "dev-master",
+        "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
+
+        "ornicar/apc-bundle": "~1.0",
 
         "sonata-project/admin-bundle": "~2.3",
-        "sonata-project/core-bundle": "~2.3",
         "sonata-project/doctrine-orm-admin-bundle": "~2.3",
-        "sonata-project/block-bundle": "~2.2",
-
+        
         "knplabs/knp-menu-bundle": "~2.0",
         "knplabs/knp-paginator-bundle": "~2.4",
 
