--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,10 @@ parameters:
     locale:             ru
     secret:             ThisTokenIsNotSoSecretChangeIt
 
+    debug_toolbar:          true
+    debug_redirects:        false
+    use_assetic_controller: true
+
     # Parameters for hipchat
     hipchat_auth_token: YOU_TOKEN_GOSE_HERE
     hipchat_name:       HipchatReporterName
