--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
     },
     "require": {
         "php": ">=5.4",
-        "symfony/symfony": "~2.6",
+        "symfony/symfony": "~2.7",
         "doctrine/orm": "~2.4",
+        "doctrine/dbal": "<2.5",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
@@ -21,7 +22,7 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        
+
         "jms/security-extra-bundle": "~1.5",
         "gedmo/doctrine-extensions": "~2.3",
 
@@ -33,11 +34,11 @@
 
         "sonata-project/admin-bundle": "~2.3",
         "sonata-project/doctrine-orm-admin-bundle": "~2.3",
-        
+
         "knplabs/knp-menu-bundle": "~2.0",
         "knplabs/knp-paginator-bundle": "~2.4",
 
-        "friendsofsymfony/user-bundle": "2.0.*@dev",
+        "friendsofsymfony/user-bundle": "2.0.x-dev",
 
         "liip/imagine-bundle": "~1.2",
         "evercodelab/hipchat-monolog-bundle": "dev-master",
