--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,6 +90,6 @@ evercode_hipchat_monolog:
     name: %hipchat_name%
     room: %hipchat_room%
 
-ornicar_apc:
+accelerator_cache:
       host: %apc_host%
       web_dir: %kernel.root_dir%/../web
